# k8s-tutorial

./: .gitignore  README.md
docs/: 001_local_s3_구성하기.md  002_job을_생성하는_pod_구성하기.md  003_cronjob을_생성하는_pod_구성하기.md  004_standalone_object_storage_구축.md
resources/: cronjob-proxy-server.yaml  job-simple-proxy-server.yaml  local-s3-deployment.yaml  local-s3-svc.yaml  local-s3.yaml  parsing_job_proxy_server.yaml  standalone-docker-private-registry.yaml  standalone_minio.yaml
services/cronjob-proxy-server/: Dockerfile  README.md  pyproject.toml
services/job-simple-proxy-server/: README.md  pyproject.toml
services/job-simple-proxy-server/proxy_server/: app.py  dto.py
services/parsing-job-proxy-server/: README.md  pyproject.toml
services/parsing-job-proxy-server/docker/: Dockerfile-parsing_job  Dockerfile-preloading_job
services/parsing-job-proxy-server/jobs/: README.md  parsing_job.py  preloading_job.py
services/parsing-job-proxy-server/jobs/parsing_job/: Dockerfile  README.md  main.py
services/parsing-job-proxy-server/jobs/preloading_job/: Dockerfile  README.md  main.py
services/parsing-job-proxy-server/proxy_manager/: dto.py  exceptions.py  settings.py  spawner.py  storage.py
services/parsing-job-proxy-server/proxy_manager/configuration/: __init__.py  common.py  settings.py  spawner.py  storage.py
services/parsing-job-proxy-server/src/: exception.py  settings.py  storage.py
services/parsing-job-proxy-server/tests/: test_storage.py
services/parsing-job-proxy-server/webapp/: Dockerfile  dependency.py  dto.py  main.py
(+5 files in other folders)
