[tool.poetry]
name = "parsing-job-proxy-server"
version = "0.1.0"
description = ""
authors = ["craftsangjae <craftsangjae@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "proxy_manager" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pydantic-settings = "^2.2.1"
yfinance = "^0.2.36"
boto3 = "^1.34.46"
pandas = "^2.2.0"
fire = "^0.5.0"
pyarrow = "^15.0.0"
kubernetes = "^29.0.0"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
